--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>jp.toppers.hakoniwa</groupId>
     <artifactId>hakonfigplugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
     <name>%bundle.name</name>
     <description>%bundle.description</description>
